<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.trackshoot.TrackShootActivity">

    <TextView
        android:id="@+id/label_road_submission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_road_submission"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_service_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/label_road_submission"
        android:layout_margin="16dp"
        android:layout_toRightOf="@+id/label_road_submission"
        android:background="@drawable/label_shape"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edittext_app_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_road_submission"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:alpha="0.6"
        android:fontFamily="sans-serif"
        android:hint="@string/label_app_id_primary"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/label_app_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edittext_app_id"
        android:layout_below="@id/label_road_submission"
        android:fontFamily="sans-serif"
        android:textSize="17sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/label_submission_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edittext_app_id"
        android:fontFamily="sans-serif"
        android:text="@string/label_submission_rate"
        android:textSize="17sp" />

    <RadioGroup
        android:id="@+id/radio_group_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_submission_rate"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/button_radio_200m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/label_200" />

        <RadioButton
            android:id="@+id/button_radio_100m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/label_100" />

        <RadioButton
            android:id="@+id/button_radio_50m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/label_50" />

    </RadioGroup>

    <Button
        android:id="@+id/button_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:textColor="@color/white" />

</RelativeLayout>
